--- a/essay1.html
+++ b/essay1.html
@@ -12,22 +12,26 @@
     <div class="container">
         <div class="text animate">
             <h3>
-                <span id=></span>Chips, US, TSMC, Culture <!-- bold header -->
+                <span id=></span> everything bagel <!-- bold header -->
             </h3>
 
             <p>
-		This essay is inspired by Intel's new process roadmap of 5 nodes in 4 years by 2025.
-		It made me think about can and should American's do leading edge wafer fab manufacturing?
+		from sand to software as a service (saas)
+Sand is purified and etched with light at an atomic scale. The etched pathways form chip architecture which perform logical operations. Computers are chips that take input and give you an output. These in/out operations get abstracted into higher level software. Software is built to make money. 
+
+from double entry bookkeeping to financial engineering 
+Tax collectors and prostitution are the oldest professions. Lending: IOU's allow future money to be brought into and spent in the present. Time value of money states a dollar today > a dollar tomorrow aka a discount. Securitization: a step in surfacing assets into these paper IOUs in a standardized way to trade. Financial markets house these standardized items to buy/sell, providing an important function of price discovery—crucial for a efficient capitalistic system. Risk: career specialists across finance study the risk profile of specific tranches of said IOUs. The name of the game is to buy low sell high. 
+
+math as the purest thing in the universe
+Numeric abstraction made numeracy the single most important concept for human progress. From counting bushels of wheat in sanskrit to launching rockets into orbit, an insane amount of mathematical progress and its laggard application allows for all the miracles we see today. 
+
+society is religion 
+Classical Greek/Roman heritage, the Anglo-Saxon Bible thumping society was able to optimize a culture around technology. Islamic and Chinese culture technologically stagnated and a lot of colonization dispersed the West's way of thinking into the world. Democratic republic society solved the historic problem of peaceful power transference, allowing multi-generation institution building to be possible. Knowledge and deep expertise is preserved, naturally requiring hyper-specialization in a capitalistic society. Modern discontent in this system is due to stagnation and a lack of growth of the proverbial pie. Zero sum thinking. 
+
+This piece is still a work in progress, sorry about the formatting
             </p>
 
-	    <p>
-	    	Yes America can, but it will require another Sputnik moment. Semi's are a long term, continuous
-		investment. A one time $53B CHIPS Act is not enough when you consider 
-		<a href="https://www.asianometry.com/p/the-economics-of-tsmcs-giga-fabs" target="_blank">The Economics of TSMC's Giga-Fabs</a>.
-		American interest in reshoring semi manufacturing will require a lot of training. The German and Taiwanese
-		apprenticeship system is a model for how the next generation of semi process engineers should be grown at home. 
 
-	    </p>
 		
         </div>
     </div>
