--- a/essays.html
+++ b/essays.html
@@ -22,9 +22,8 @@
             </h1>
             <p>
                 <!-- list -->
-		Thoughts
                 <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_self">Chips, US, TSMC, Culture</a></li>
+                    <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_self">my understanding of everything</a></li>
                 </ul>
 		
                 <ul>
