--- a/index.html
+++ b/index.html
@@ -22,18 +22,48 @@
             </h1>
 
             <p>
-		Working in regulation, compliance, and risk management with experience at
-		financial service, bank, startup, venture capital, and big tech companies.
+	    	I'm currently a Master's student at Georgia Tech studying
+		Cybersecurity and Public Policy while working in risk management at Amazon.
 	    <p/>
 
 	    <p>
-		About me: Born in San Francisco, raised in Los Angeles, studied in Austin, 
-		did a stint in New York and Taipei, now working in Seattle. Love to hear
-		your thoughts on technology, business, law, soft-sciences, or policy at: 
+	    	As a reformed accountant and wannabe software engineer, I got
+		into this tech/business grift after observing the perpetual
+		informational asymmetry between the New York and Silicon Valley schools of thought.
+		My career long thesis can be boiled down to a regulatory arbitrage play:
+		The next frontier of technology products will attempt to build in the
+		nonporous areas of bits, atoms, and heavy regulation, requiring tech-literate
+		talent to navigate regulatory overhead when they should instead be focused
+		on building. 
+	    <p/>
+
+	    <p>
+	    	It shouldn't surprise you that my first job was as an IT Auditor,
+		auditing the systems of development environments for compliance.
+		I then did a software stint at my friend's startup (thanks, Armel).
+		Check out his new robotics IoT startup, Miru, backed by YC.
+		I then worked at a venture capital shop in Taipei, looking at EV
+		hardware downstream to applied materials startups. 
+		I wrote a paper on that Volkswagen and Continental read, pitching
+		them on investing in RnD sites in Taiwan instead of Vietnam
+		—don’t ask me about Sino-Western tech geopolitics; it’s a mess,
+		and I could go on forever. My final stint in corporate banking at
+		JPMorgan was fun, especially in 2023, where I covered risks associated
+		with banking implosions plus got my first taste of finance at scale.
+		Now I’m here at Amazon, doing legal and compliance stuff.
+	    <p/>
+
+	    <p>
+		A little about me: Born in San Francisco, raised in Los Angeles, 
+		studied accounting, infosystems, and cs at UT Austin, 
+		did the banking stint in New York and the VC stint in Taipei, and currently
+		work in Seattle. Love to hear
+		your thoughts on technology, business, law, soft-sciences, policy, progress,
+		or anything at: 
 	    <p/>
 	    
 	    <p>
-	    	douglaslin0723@gmail.com 
+	    	douglaslin0723 at gmail.com 
 	    <p/>
 
             <p> 
