--- a/essays.html
+++ b/essays.html
@@ -18,55 +18,23 @@
     <div class="container">
         <div class="text animate">
             <h1>
-                <span id=></span>  <!-- bold header -->
+                <span id="greeting"></span>  <!-- Bold header -->
             </h1>
             <p>
-                <!-- list -->
-                <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay1.html" target="_self">my understanding of everything</a></li>
-                </ul>
-		
-                <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay2.html" target="_self">How I Would Design a Hardware Apprenticeship Program</a></li>
-                </ul>
-		
-                <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay3.html" target="_self">Notes Talking to a TSMC Process Integration Engineer</a></li>
-                </ul>
-
-                <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay4.html" target="_self">The Accounting Profession Is Stuck in the Shrinking Middle</a></li>
-                </ul>
-
-                <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay5.html" target="_self">Risk, Risk, and More Risk at Banks</a></li>
-                </ul>
-		
-                <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay6.html" target="_self">Thoughts on Generational Policymaking Talent</a></li>
-                </ul>
-		
-                <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay7.html" target="_self">Gripes on Asia's Teaching System</a></li>
-                </ul>
-		
-                <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay8.html" target="_self">Venture, Hardware, Software Observations in Taipei</a></li>
-                </ul>
-
-                <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay9.html" target="_self">Rolling Up Retiring Practices vs Building From Scratch</a></li>
-                </ul>
-
-                <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay10.html" target="_self">International Import Export SMBs</a></li>
-                </ul>
-
-                <ul>
-                    <li><a href="https://dougylin.github.io/mywebsite/essay11.html" target="_self">The Chinese Diaspora Experience</a></li>
-                </ul>
-		
-
+                <!-- Links without bullets -->
+                <div>
+                    <a href="https://dougylin.github.io/mywebsite/essay1.html" target="_self">Everything Bagel</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay2.html" target="_self">Hardware in the US as a Student</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay3.html" target="_self">Thoughts on TSMC and Semis</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay4.html" target="_self">The Accounting Profession Is Stuck in the Shrinking Middle</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay5.html" target="_self">What is Risk?</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay6.html" target="_self">Policymaking Talent</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay7.html" target="_self">Asia</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay8.html" target="_self">Taipei</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay9.html" target="_self">Services Industry: Accounting, Law, etc</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay10.html" target="_self">SMBs</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay11.html" target="_self">The Chinese Diaspora Experience</a>
+                </div>
             </p>
         </div>
     </div>
