--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:300,400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script>
-        window.onload = function(){
+        window.onload = function() {
             var greetings = ['Hi', 'Hello', 'Hey', 'Howdy', 'Welcome'];
             var idx = Math.floor(Math.random() * greetings.length);
             document.getElementById('greeting').innerHTML += `${greetings[idx]}!`;
@@ -22,80 +22,59 @@
             </h1>
 
             <p>
-	    	I'm currently a Master's student at Georgia Tech studying
-		Cybersecurity and Public Policy while working in risk management at Amazon.
-	    <p/>
+                I'm currently a Master's student at Georgia Tech studying Cybersecurity and Public Policy while working in risk management at Amazon.
+            </p>
 
-	    <p>
-	    	As a reformed accountant and wannabe software engineer, I got
-		into this tech/business grift after observing the perpetual
-		informational asymmetry between the New York and Silicon Valley schools of thought.
-		My career long thesis can be boiled down to a regulatory arbitrage play:
-		The next frontier of technology products will attempt to build in the
-		nonporous areas of bits, atoms, and heavy regulation, requiring tech-literate
-		talent to navigate regulatory overhead when they should instead be focused
-		on building. 
-	    <p/>
-
-	    <p>
-	    	It shouldn't surprise you that my first job was as an IT Auditor,
-		auditing the systems of development environments for compliance.
-		I then did a software stint at my friend's startup (thanks, Armel).
-		Check out his new robotics IoT startup, Miru, backed by YC.
-		I then worked at a venture capital shop in Taipei, looking at EV
-		hardware downstream to applied materials startups. 
-		I wrote a paper on that Volkswagen and Continental read, pitching
-		them on investing in RnD sites in Taiwan instead of Vietnam
-		—don’t ask me about Sino-Western tech geopolitics; it’s a mess,
-		and I could go on forever. My final stint in corporate banking at
-		JPMorgan was fun, especially in 2023, where I covered risks associated
-		with banking implosions plus got my first taste of finance at scale.
-		Now I’m here at Amazon, doing legal and compliance stuff.
-	    <p/>
-
-	    <p>
-		A little about me: Born in San Francisco, raised in Los Angeles, 
-		studied accounting, infosystems, and cs at UT Austin, 
-		did the banking stint in New York and the VC stint in Taipei, and currently
-		work in Seattle. Love to hear
-		your thoughts on technology, business, law, soft-sciences, policy, progress,
-		or anything at: 
-	    <p/>
-	    
-	    <p>
-	    	douglaslin0723 at gmail.com 
-	    <p/>
-
-            <p> 
-	    	<a href="https://www.linkedin.com/in/douglaslin0723/" target="">LinkedIn</a>
-	   </p>
-
-
-<!--
             <p>
-	        Writing: 
-	    	<a href="https://dougylin.substack.com/" target="">Substack</a>
+                As a reformed accountant and wannabe software engineer, I got into this tech/business thing after observing the perpetual informational 
+				asymmetry between the New York and Silicon Valley schools of thought. My career-long thesis can be boiled down to a regulatory arbitrage
+				play: The next frontier of technology products will attempt to build in the nonporous areas of bits, atoms, and heavy regulation, 
+				requiring tech-literate talent to navigate regulatory overhead when they should instead be focused on building.
+            </p>
+
+            <p>
+                I started as IT Auditor, auditing the systems of development environments for compliance. 
+				I did front end engineering at a startup. I spent half a year at a VC shop in Taipei, looking at hardware/applied materials startups and
+				pitched some multinational corps to build RnD centers in Taipei. 
+				JPMorgan risk management was fun in 2023 when regionals were collapsing. Now I’m here at Amazon, doing legal and compliance stuff.
+            </p>
+
+            <p>
+                Some fun facts: I was born in San Francisco, raised in Los Angeles, studied accounting, information systems, and computer science at UT Austin. 
+				Love to hear your thoughts on technology, business, law, soft/hard sciences, policy, progress, book rec's or anything at:
+            </p>
+
+            <p>
+                douglaslin0723 at gmail.com
+            </p>
+
+<!-- Uncomment if needed later
+            <p>
+                <a href="https://www.linkedin.com/in/douglaslin0723/" target="_blank">LinkedIn</a>
             </p>
 
 
             <p>
-	    	Projects: 
-	    	<a href="https://" target="">tbd</a>
-	   </p>
+                Writing: 
+                <a href="https://dougylin.substack.com/" target="_blank">Substack</a>
+            </p>
+
+            <p>
+                Projects: 
+                <a href="#" target="_blank">TBD</a>
+            </p>
 -->
-            <p> 
-	    	<a href="https://dougylin.github.io/mywebsite/essays" target="">Notes</a>
-            </p>
 
+            <p>
+                <a href="https://dougylin.github.io/mywebsite/essays" target="_blank">Notes</a>
+            </p>
         </div>
     </div>
 
-    <!-- Adjust script URL -->
     <script src="https://www.googletagmanager.com/gtag/js?id=G-WZE41GSRYR" async></script>
     <script>
-        // Adjusted gtag script
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'G-WZE41GSRYR');
     </script>
