--- a/essay2.html
+++ b/essay2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How I Would Design a Hardware Apprenticeship Program</title>
+    <title>Hardware Programs</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:300,400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -16,7 +16,7 @@
             </h3>
 
             <p>
-	    	Copy Germany and Taiwan's apprenticeship systems.
+	    	Copy Germany and Taiwan's apprenticeship systems. 
             </p>
 
 	    <p>
