--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             </p>
 
             <p>
-                As a reformed accountant and wannabe software engineer, I got into this tech/business thing after observing the perpetual informational 
+                As a reformed accountant and wannabe software engineer, I got into this tech/business thing after observing the perpetual information 
 				asymmetry between the New York and Silicon Valley schools of thought. My career-long thesis can be boiled down to a regulatory arbitrage
-				play: The next frontier of technology products will attempt to build in the nonporous areas of bits, atoms, and heavy regulation, 
-				requiring tech-literate talent to navigate regulatory overhead when they should instead be focused on building.
+				play: The next frontier of technology products will build in the nonporous areas of bits, atoms, and heavy regulation, 
+				requiring tech-literate business/legal talent to navigate regulatory overhead when they should instead be focused on building.
             </p>
 
             <p>
@@ -40,7 +40,7 @@
             </p>
 
             <p>
-                Some fun facts: I was born in San Francisco, raised in Los Angeles, studied accounting, information systems, and computer science at UT Austin. 
+                Fun facts: I was born in San Francisco, raised in Los Angeles, studied accounting, information systems, and computer science at UT Austin. 
 				Love to hear your thoughts on technology, business, law, soft/hard sciences, policy, progress, book rec's or anything at:
             </p>
 
