--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </p>
 
             <p>
-                I started as IT Auditor, auditing the systems of development environments for compliance. 
+                I started as an IT Auditor of systems of development environments for compliance. 
 				I did front end engineering at a startup. I spent half a year at a VC shop in Taipei, looking at hardware/applied materials startups and
 				pitched some multinational corps to build RnD centers in Taipei. 
 				JPMorgan risk management was fun in 2023 when regionals were collapsing. Now I’m here at Amazon, doing legal and compliance stuff.
