--- a/index.html
+++ b/index.html
@@ -21,31 +21,38 @@
                 <span id="greeting"></span> I&rsquo;m Douglas Lin.
             </h1>
 
+            
             <p>
                 I'm currently a Master's student at Georgia Tech studying Cybersecurity and Public Policy while working in risk management at Amazon.
             </p>
 
             <p>
-                As a reformed accountant and wannabe software engineer, I got into this tech/business thing after observing the perpetual information 
-				asymmetry between the New York and Silicon Valley schools of thought. My career-long thesis can be boiled down to a regulatory arbitrage
-				play: The next frontier of technology products will build in the nonporous areas of bits, atoms, and heavy regulation, 
-				requiring tech-literate business/legal talent to navigate regulatory overhead when they should instead be focused on building.
+                I started as an IT Auditor working on SOC+ audits. 
+				I did front end at a startup (now bust). I spent half a year at a venture capital 
+                <a href="https://www.linkedin.com/company/mosaic-venture-lab/posts/?feedView=all" target="_blank">shop</a> 
+                in Taipei.  I researched at hardware/applied materials startups +
+				pitched multinational corps to build RnD centers in Taipei with the <a href="https://law.moea.gov.tw/EngLawContent.aspx?lan=E&id=10517" target="_blank">MOE</a> + wrote a
+                <a href="https://www.linkedin.com/posts/mosaic-venture-lab_grapene-report-teasermosaic-venture-lab-activity-7053922186931113984-cTWJ?utm_source=share&utm_medium=member_desktop" target="_blank">whitepaper</a> 
+                on graphene composites in EV's/automobiles. 
+				I covered corporate banking <a href="https://www.federalreserve.gov/publications/files/svb-review-20230428.pdf" target="_blank">risks</a> at JPMorgan, NY. 
+                I'm now at Amazon, doing legal, compliance, and <a href="https://github.com/dougylin/match" target="_blank">coding</a> scripts on the side. 
             </p>
-
+            
             <p>
-                I started as an IT Auditor of systems of development environments for compliance. 
-				I did front end engineering at a startup. I spent half a year at a VC shop in Taipei, looking at hardware/applied materials startups and
-				pitched some multinational corps to build RnD centers in Taipei. 
-				JPMorgan risk management was fun in 2023 when regionals were collapsing. Now I’m here at Amazon, doing legal and compliance stuff.
+                I got into this tech/business limbo seeing the disconnect between the NY vs SF <a href="https://scholarstage.substack.com/p/the-silicon-valley-canon" target="_blank">schools</a>
+                of thought.
+                My career-long skill acquisition thesis is inspired by the concpet of regulatory <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=1567212" target="_blank">arbitrage.</a>
+                The next products will build in the areas of bits, atoms, and 
+                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2741987" target="_blank">regulations.</a>
             </p>
 
             <p>
                 Fun facts: I was born in San Francisco, raised in Los Angeles, studied accounting, information systems, and computer science at UT Austin. 
-				Love to hear your thoughts on technology, business, law, soft/hard sciences, policy, progress, book rec's or anything at:
+				Love to hear your thoughts on technology, business, law, sscience, policy, progress, book rec's or anything at:
             </p>
 
             <p>
-                douglaslin0723 at gmail.com
+                douglaslin0723 [at] gmail.com
             </p>
 
 <!-- Uncomment if needed later
