--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <p>
                 Fun facts: I was born in San Francisco, raised in Los Angeles, studied accounting, information systems, and computer science at UT Austin. 
-				Love to hear your thoughts on technology, business, law, sscience, policy, progress, book rec's or anything at:
+				Love to hear your thoughts on technology, business, law, science, policy, progress, book/substack/newsletter rec's or anything interesting at:
             </p>
 
             <p>
