--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script>
         window.onload = function() {
-            var greetings = ['Hi', 'Hello', 'Hey', 'Howdy', 'Welcome'];
+            var greetings = ['Hi', 'Hello', 'Hey', 'Howdy', 'Welcome', "G'day", 'Heya', 'Heyo', 'Yo!', 'Greetings', 'Hiya'];
             var idx = Math.floor(Math.random() * greetings.length);
             document.getElementById('greeting').innerHTML += `${greetings[idx]}!`;
         };
