--- a/essay1.html
+++ b/essay1.html
@@ -47,7 +47,7 @@
             </p>
 
             <p>
-                This piece is still a work in progress. Sorry about the formatting!
+                This piece is still a work in progress.
             </p>
 
         </div>
