--- a/essays.html
+++ b/essays.html
@@ -24,8 +24,8 @@
                 <!-- Links without bullets -->
                 <div>
                     <a href="https://dougylin.github.io/mywebsite/essay1.html" target="_self">Everything Bagel</a><br>
-                    <a href="https://dougylin.github.io/mywebsite/essay2.html" target="_self">The Automation Question in SWE, Accounting, and Law</a><br>
-                    <a href="https://dougylin.github.io/mywebsite/essay3.html" target="_self">My Thoughts on TSMC and Semis</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay2.html" target="_self">The Automation Question</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay3.html" target="_self">My Thoughts on Semis</a><br>
                     <a href="https://dougylin.github.io/mywebsite/essay4.html" target="_self">The Accounting Profession Is Stuck in the Shrinking Middle</a><br>
                     <a href="https://dougylin.github.io/mywebsite/essay5.html" target="_self">What is Risk?</a><br>
                     <a href="https://dougylin.github.io/mywebsite/essay6.html" target="_self">Policymaking Talent</a><br>
