--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script>
         window.onload = function() {
-            var greetings = ['Hi', 'Hello', 'Hey', 'Howdy', 'Welcome', "G'day", 'Heya', 'Heyo', 'Yo!', 'Greetings', 'Hiya'];
+            var greetings = ['Hi', 'Hello', 'Hey', 'Howdy', 'Welcome', "G'day", 'Heya', 'Heyo', 'Nice to meet you', 'Greetings', 'Hiya'];
             var idx = Math.floor(Math.random() * greetings.length);
             document.getElementById('greeting').innerHTML += `${greetings[idx]}!`;
         };
@@ -39,11 +39,12 @@
             </p>
             
             <p>
-                I got into this tech/business limbo seeing the disconnect between the NY vs SF <a href="https://scholarstage.substack.com/p/the-silicon-valley-canon" target="_blank">schools</a>
+                I got into this tech/business limbo seeing the disconnect between the NY, DC, and SF <a href="https://scholarstage.substack.com/p/the-silicon-valley-canon" target="_blank">schools</a>
                 of thought.
                 My career-long skill acquisition thesis is inspired by the concpet of regulatory <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=1567212" target="_blank">arbitrage.</a>
                 The next products will build in the areas of bits, atoms, and 
-                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2741987" target="_blank">regulations.</a>
+                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2741987" target="_blank">regulations.</a> De/regululation is cyclical and creative destruction is 
+                required to balance innovation and social benefit and safety. 
             </p>
 
             <p>
