--- a/essays.html
+++ b/essays.html
@@ -27,7 +27,7 @@
                     <a href="https://dougylin.github.io/mywebsite/essay2.html" target="_self">The Automation Question</a><br>
                     <a href="https://dougylin.github.io/mywebsite/essay3.html" target="_self">My Thoughts on Semis</a><br>
                     <a href="https://dougylin.github.io/mywebsite/essay4.html" target="_self">The Accounting Profession Is Stuck in the Shrinking Middle</a><br>
-                    <a href="https://dougylin.github.io/mywebsite/essay5.html" target="_self">What is Risk?</a><br>
+                    <a href="https://dougylin.github.io/mywebsite/essay5.html" target="_self">My Advice to IT Auditor Careers</a><br>
                     <a href="https://dougylin.github.io/mywebsite/essay6.html" target="_self">Policymaking Talent</a><br>
                     <a href="https://dougylin.github.io/mywebsite/essay7.html" target="_self">Asia</a><br>
                     <a href="https://dougylin.github.io/mywebsite/essay8.html" target="_self">Taipei</a><br>
