--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
                 I started as an IT Auditor working on SOC+ audits. 
 				I did front end at a startup (now bust). I spent half a year at a venture capital 
                 <a href="https://www.linkedin.com/company/mosaic-venture-lab/posts/?feedView=all" target="_blank">shop</a> 
-                in Taipei.  I researched at hardware/applied materials startups +
+                in Taipei.  I researched asian hardware/applied materials startups +
 				pitched multinational corps to build RnD centers in Taipei with the <a href="https://law.moea.gov.tw/EngLawContent.aspx?lan=E&id=10517" target="_blank">MOE</a> + wrote a
                 <a href="https://www.linkedin.com/posts/mosaic-venture-lab_grapene-report-teasermosaic-venture-lab-activity-7053922186931113984-cTWJ?utm_source=share&utm_medium=member_desktop" target="_blank">whitepaper</a> 
                 on graphene composites in EV's/automobiles. 
-				I covered corporate banking <a href="https://www.federalreserve.gov/publications/files/svb-review-20230428.pdf" target="_blank">risks</a> at JPMorgan, NY. 
-                I'm now at Amazon, doing legal, compliance, and <a href="https://github.com/dougylin/match" target="_blank">coding</a> scripts on the side. 
+				I covered corporate banking <a href="https://www.federalreserve.gov/publications/files/svb-review-20230428.pdf" target="_blank">risks</a> at JPMorgan NY. 
+                I'm now at Amazon, doing legal, compliance, and <a href="https://github.com/dougylin/match" target="_blank">scripts</a> on the side. 
             </p>
             
             <p>
                 I got into this tech/business limbo seeing the disconnect between the NY, DC, and SF <a href="https://scholarstage.substack.com/p/the-silicon-valley-canon" target="_blank">schools</a>
                 of thought.
-                My career-long skill acquisition thesis is inspired by the concpet of regulatory <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=1567212" target="_blank">arbitrage.</a>
+                My career skill acquisition long thesis is built on the concpet of regulatory <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=1567212" target="_blank">arbitrage.</a>
                 The next products will build in the areas of bits, atoms, and 
-                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2741987" target="_blank">regulations.</a> De/regululation is cyclical and creative destruction is 
-                required to balance innovation and social benefit and safety. 
+                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2741987" target="_blank">regulations.</a> De/regulation is cyclical and creative destruction is 
+                required to balance innovation, societal benefit, and safety. 
             </p>
 
             <p>
