--- a/essay1.html
+++ b/essay1.html
@@ -53,5 +53,15 @@
         </div>
     </div>
 
+    <div class="container">
+        <div>
+            <!-- Your content here -->
+        </div>
+    </div>
+    <div class="footer">
+        
+    </div>
+    
+
 </body>
 </html>
